# syntora-crm

./: AUTOMATION-SPRINT-1-COMPLETE.md  BUGFIX-CONTACTS-NOT-CONNECTED.md  BUGFIX-DOUBLE-COUNTING-ANALYTICS.md  BUGFIX-LEVEL-RESET-ON-REFRESH.md  CONTACTS_COMPANIES_INTEGRATION_PLAN.md  DASHBOARD-SALES-SUPABASE-FIX.md  FEATURES.md  FINANCE-IMPLEMENTATION-SUMMARY.md  FINANCE-SYSTEM-README.md  README.md  SUPABASE-COMPLETE-ALL-PAGES.md  SUPABASE-CONNECTION-COMPLETE.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
automations/: README.md  environment-template.txt  workflow-template.json
automations/contacts/: ENHANCED-WORKFLOW-README.md  IMPLEMENTATION-GUIDE.md  READY-TO-DEPLOY.md  airtable-daily-sync.json  deployment-config.json  environment-config.md  setup-guide.md  supabase-direct-sync.json  test-connection.ps1
docs/: cursor_todo_prompt.md  previousconversation3.txt  previousconversationwithclaude.txt  previousconversationwithclaude2.txt  syntora-schemapublic.txt
scripts/: build.ps1  migrate-structure.ps1  reset-parker-password.js  reset-parker-password.ps1  setup-email-secrets.ps1  setup.ps1  update-parker-role.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/achievements/: page.tsx
src/app/admin/: page.tsx
src/app/analytics/: page.tsx
src/app/companies/: page.tsx
src/app/components/: Providers.tsx
src/lib/: supabase.ts
supabase/migrations/: add_company_indexes.sql
(+155 files in other folders)
