[package]
name = "app"
version = "0.1.0"
description = "Syntora Todo - Personal Task Manager"
authors = ["Syntora"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
